[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fincept-terminal"
version = "0.1.0"
description = "A powerful financial terminal for market data, analysis, and insights"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Fincept Corporation", email = "support@fincept.in" }
]
keywords = ["finance", "terminal", "market-data", "stocks", "analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Terminals",
]
dependencies = [
    "textual>=0.47.0",
    "rich>=13.7.0",
    "httpx>=0.26.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "plotext>=5.2.8",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "click>=8.1.7",
    "toml>=0.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
fincept = "fincept_terminal.cli:main"

[project.urls]
Homepage = "https://github.com/Fincept-Corporation/FinceptTerminal"
Repository = "https://github.com/Fincept-Corporation/FinceptTerminal"
Issues = "https://github.com/Fincept-Corporation/FinceptTerminal/issues"
Documentation = "https://docs.fincept.in"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Removed --cov flags so tests can run quickly without coverage overhead during local dev
# Added -s to show print() output during test runs, helpful when debugging locally
addopts = "-v -s"

[tool.coverage.run]
source = ["src/fincept_terminal"]
omit = ["tests/*", "**/__init__.py"]
